src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__add_series_ui__add_series_ui_tests__tests__snapshot_tests__add_series_ui_AddSeriesSelectMonitor.snap
---
source: src/ui/sonarr_ui/library/add_series_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭──────────────────────────────────────────  Add Series - Test  ──────────────────────────────────────────╮                              
                     ╭──────│                                        New series blah blah blah                                        │───────╮                      
                     │someth│                                                                                                         │       │                      
                     ╰──────│                                                                                                         │───────╯                      
                     ╭──────│                                                                                                         │───────╮                      
                     │   ✔  │                                                                                                         │       │                      
                     │=>    │                                                                                                         │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                     Root Folder: │/nfs                                           ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                         Monitor: │All Episodes                                   ▼ │    │       │                      
                     │      │                                     ╭───────────────────────────────╮──────────────────────────────╯    │       │                      
                     │      │                                     │All Episodes                   │──────────────────────────────╮    │       │                      
                     │      │                                 Qual│Unknown                        │                            ▼ │    │       │                      
                     │      │                                     │Future Episodes                │──────────────────────────────╯    │       │                      
                     │      │                                     │Missing Episodes               │──────────────────────────────╮    │       │                      
                     │      │                                Langu│Existing Episodes              │                            ▼ │    │       │                      
                     │      │                                     │Only First Season              │──────────────────────────────╯    │       │                      
                     │      │                                     │Only Last Season               │──────────────────────────────╮    │       │                      
                     │      │                                     │Only Latest Season             │                            ▼ │    │       │                      
                     │      │                                     │Pilot Episode                  │──────────────────────────────╯    │       │                      
                     │      │                                     │Recent Episodes                │                                   │       │                      
                     │      │                                   Se│Only Specials                  │                                   │       │                      
                     │      │                                     │Not Specials                   │                                   │       │                      
                     │      │                                     │None                           │──────────────────────────────╮    │       │                      
                     │      │                                     ╰───────────────────────────────╯                              │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│       │                      
                     │      ││                        Add                        ││                      Cancel                      ││       │                      
                     ╰──────│╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│───────╯                      
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
